--- a/style.css
+++ b/style.css
@@ -132,6 +132,48 @@ footer {
 
 }
 
+@media (max-width: 800px) {
+    body {
+        height: auto;
+    }
+    #app{
+        width: 98%;
+    }
+    .modal {
+        width: 100%;
+        height: 90vh;
+        margin-bottom: 2rem;
+    }
+
+    .list-item {
+        display: flex;
+        flex-direction: column;
+    }
+    .list-item .actions {
+        flex-direction: column;
+    }
+
+    footer {
+        border-top: none;
+    }
+    .navbar {
+        justify-content: center;
+        align-self: center;
+    }
+    .navbar li {
+        width: 100%;
+        text-align: center;
+        margin-top: 1rem;
+    }
+    .home {
+        display: flex;
+        height: 70vh;
+        padding: 0 2rem;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
 .modal .title {
     margin-bottom: 1rem;
 }
@@ -186,6 +228,6 @@ footer {
     height: 100%;
     display: flex;
     align-items: center;
-    padding-left: 50px;
+    flex-wrap: wrap;
     gap: 15px;
 }
