--- a/style.css
+++ b/style.css
@@ -1,89 +1,166 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@import url('./styles/sidebar.css');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;
-    list-style: none;
-    text-decoration: none;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
 }
 
 :root {
-    --primary: #36283C;
-    --primay-black: #2B2C33;
-    --secondary: #A45FBD;
-    --secondary-black: #383A46;
-    --primary-gray: #474E70;
-    --white: #F3E2EE;
-
+    --background-1: #f9f9f9;
+    --background-2: white;
+    --border-1: #6a283e;
 }
 
-#app {
-    display: grid; 
-    grid-template-rows: 1fr;
-    grid-template-columns: auto 1fr;
-    height: 100vh;
-    width: 100%;
-}
-
-.btn {
-    background: none;
-    border: none;
-    cursor: pointer;
-    border-radius: 3px;
-}
-
-.btn-primary {
-    color: var(--white);
-    background-color: var(--primary);
-    font-size: 1rem;
-    padding: 3px 6px;
-    
-}
-
-.btn-primary:hover {
-    transition: .2s;
-    color: var(--white);
-    background-color: var(--secondary);
-}
-
-input {
-    border: 1px solid var(--primary);
-    border-radius: 5px;
-    font-size: 1rem;
-    padding: 2px 10px;
-    color: var(--secondary);
+input, select, button {
     width: auto;
+    height: 30px;
+    padding: 5px 10px;
+    border: 1px solid var(--border-1);
+    border-radius: 4px;
+    font-size: .9rem;
 }
 
-/*************/
-.board {
-    max-height: 100vh;
-    width: 100%;
-    height: 100%;
-    display: grid; 
-    grid-template-rows: 80px 1fr;
-    grid-template-columns: 1fr;
-    padding-left: 100px;
+button {
+    background-color: var(--border-1);
+    color: var(--background-2);
+    cursor: pointer;
 }
+
+@media (max-width: 530px){
+    input, select, button {
+        width: 100%;
+    }
+}
+
+body {
+    width: 100vw;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 40px 30px;
+    background-color: var(--background-1);
+    gap: 20px;
+}
+
+/*Header de Consulta*/
 
 header {
     width: 100%;
+    background-color: var(--background-2);
+    border: 1px solid var(--border-1);
+    padding: 30px;
     display: flex;
-    gap: 5px;
-    padding: 10px 0 0 10px;
-    justify-content: center;
+    flex-direction: column;
+    gap: 20px;
+    border-radius: 10px;
 }
 
-#clienteForm {
-    display: grid; 
+#consulta {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
-    grid-template-rows: 1fr;
-    grid-template-columns: 1fr 1fr 1fr;
+.inputs-form {
+    gap: 10px;
+    display: flex;
+    align-items: center;
+}
+
+@media (max-width: 530px){
+    #consulta{
+        flex-direction: column;
+    }
+    .inputs-form {
+        margin-bottom: 10px;
+        flex-direction: column;
+        width: 100%;
+    }
+}
+
+/*Main*/
+
+main {
+    width: 100%;
+    height: auto;
+}
+
+.modal-dados-consultados{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    background-color: var(--background-2);
+    border-radius: 10px;
+    padding: 30px;
+    border: 1px solid var(--border-1);
+}
+
+
+.dados-consultados {
+    
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+
+.dados-cliente {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+
+@media (max-width: 700px) {
+    .dados-consultados {
+        flex-direction: column;
+        align-items: center;
+    }
+    .dados-cliente {
+        display: flex;
+        flex-wrap: wrap;
+        padding-bottom: 15px;
+        gap: 10px;
+        justify-content: center;
+    }
+}
+
+.dados-manipulacao {
+    display: flex;
     gap: 10px;
 }
 
-.form-group label {
-    display: block;
-    margin-bottom: .5rem;
+/*Formulario Cadastro Edicao*/
+
+.cadastro-edicao {
+    width: 100%;
+    height: auto;
+    padding: 30px;
+    margin-top: 20px;
+    background-color: var(--background-2);
+    border: 1px solid var(--border-1);
+    border-radius: 10px;
+}
+
+#formulario-cadastro-edicao {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
+}
+
+#formulario-cadastro-edicao input {
+    width: 100%;
+}
+
+.form-container {
+    width: 100%;
+    min-width: 100px;
+    max-width: 500px;
 }
